{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 526,
  "lineage": "b4cc44e5-0b5f-7e51-a9cd-0d0e649e981a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "decoy_sensor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0609186b60570e9c9",
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:instance/i-0b0ec48bc2b275215",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0ec48bc2b275215",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb3e7db8d349f955",
            "private_dns": "ip-10-0-1-206.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-54-151-192-100.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.192.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026b9f9a6bc9e5eba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04905256ec08eafc0",
            "tags": {
              "Name": "containerized-apps-infra-dev-decoy-sensor"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-decoy-sensor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096dd8c57169352ec"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.decoy_sensor_sg",
            "data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "decoy_sensor_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:security-group/sg-096dd8c57169352ec",
            "description": "Allow specific inbound port for decoy sensor",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096dd8c57169352ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound on decoy port (e.g., Telnet 23)",
                "from_port": 23,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 23
              }
            ],
            "name": "containerized-apps-infra-dev-decoy-sg",
            "name_prefix": "",
            "owner_id": "068882397753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "containerized-apps-infra-dev-decoy-sg"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-decoy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:loadbalancer/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91",
            "arn_suffix": "app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "containerized-apps-infra-dev-lb-1430126639.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:loadbalancer/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "containerized-apps-infra-dev-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083df872ecb682261"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04905256ec08eafc0"
              },
              {
                "subnet_id": "subnet-05477c936b7d696f3"
              }
            ],
            "subnets": [
              "subnet-04905256ec08eafc0",
              "subnet-05477c936b7d696f3"
            ],
            "tags": {
              "Name": "containerized-apps-infra-dev-lb"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-lb"
            },
            "vpc_id": "vpc-076d9e631db651a10",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:listener/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91/2ab87cdb7faa969f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:listener/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91/2ab87cdb7faa969f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:loadbalancer/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:listener/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91/5385a8244597e2a7",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:068882397753:certificate/42462aa0-9251-4d4a-80bd-c553906096b4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:targetgroup/containerized-apps-infra-dev-tg/5ff420009540d094",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:listener/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91/5385a8244597e2a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:loadbalancer/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.main",
            "module.compute.aws_lb_target_group.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:targetgroup/containerized-apps-infra-dev-tg/5ff420009540d094",
            "arn_suffix": "targetgroup/containerized-apps-infra-dev-tg/5ff420009540d094",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:targetgroup/containerized-apps-infra-dev-tg/5ff420009540d094",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:068882397753:loadbalancer/app/containerized-apps-infra-dev-lb/0af55e0c53e2ab91"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "containerized-apps-infra-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be87de6cd115811a",
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:elastic-ip/eipalloc-0be87de6cd115811a",
            "association_id": "eipassoc-03a2c120f40a7343c",
            "domain": "vpc",
            "id": "eipalloc-0be87de6cd115811a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0cf508ddcd338d309",
            "private_dns": "ip-10-0-1-82.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-18-140-253-63.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.253.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "containerized-apps-infra-dev-nat-eip"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:internet-gateway/igw-0e1ae22cba0e3fc0b",
            "id": "igw-0e1ae22cba0e3fc0b",
            "owner_id": "068882397753",
            "tags": {
              "Name": "containerized-apps-infra-dev-igw"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-igw"
            },
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be87de6cd115811a",
            "association_id": "eipassoc-03a2c120f40a7343c",
            "connectivity_type": "public",
            "id": "nat-0b99f82d39a72a775",
            "network_interface_id": "eni-0cf508ddcd338d309",
            "private_ip": "10.0.1.82",
            "public_ip": "18.140.253.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04905256ec08eafc0",
            "tags": {
              "Name": "containerized-apps-infra-dev-nat-gw"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:route-table/rtb-0eff260431702ba88",
            "id": "rtb-0eff260431702ba88",
            "owner_id": "068882397753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b99f82d39a72a775",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "containerized-apps-infra-dev-private-rt"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:route-table/rtb-087f452da7207e3c8",
            "id": "rtb-087f452da7207e3c8",
            "owner_id": "068882397753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1ae22cba0e3fc0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "containerized-apps-infra-dev-public-rt"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01243b96645604e21",
            "route_table_id": "rtb-0eff260431702ba88",
            "subnet_id": "subnet-0011cf85f7f27b5bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b80011044215e2",
            "route_table_id": "rtb-0eff260431702ba88",
            "subnet_id": "subnet-08b55f6cf2fdb4e50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073e71b6b01ab382c",
            "route_table_id": "rtb-087f452da7207e3c8",
            "subnet_id": "subnet-04905256ec08eafc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7be08532e274fa5",
            "route_table_id": "rtb-087f452da7207e3c8",
            "subnet_id": "subnet-05477c936b7d696f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:subnet/subnet-0011cf85f7f27b5bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0011cf85f7f27b5bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068882397753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "containerized-apps-infra-dev-private-subnet-a"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-private-subnet-a"
            },
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:subnet/subnet-08b55f6cf2fdb4e50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b55f6cf2fdb4e50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068882397753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "containerized-apps-infra-dev-private-subnet-b"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-private-subnet-b"
            },
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:subnet/subnet-04905256ec08eafc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04905256ec08eafc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068882397753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "containerized-apps-infra-dev-public-subnet-a"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-public-subnet-a"
            },
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:subnet/subnet-05477c936b7d696f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05477c936b7d696f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068882397753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "containerized-apps-infra-dev-public-subnet-b"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-public-subnet-b"
            },
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:vpc/vpc-076d9e631db651a10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbff7ef528db3f02",
            "default_route_table_id": "rtb-074d0ad44c0415ee1",
            "default_security_group_id": "sg-07cd4c90d3004d56f",
            "dhcp_options_id": "dopt-0e565a51eb9bfdb98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076d9e631db651a10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074d0ad44c0415ee1",
            "owner_id": "068882397753",
            "tags": {
              "Name": "containerized-apps-infra-dev-vpc"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:security-group/sg-083df872ecb682261",
            "description": "Controls access to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083df872ecb682261",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound (will be for redirect)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "containerized-apps-infra-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "068882397753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "containerized-apps-infra-dev-alb-sg"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:security-group/sg-05fc012b9be2b5b76",
            "description": "Controls access to the ECS Fargate services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fc012b9be2b5b76",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB on the application port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083df872ecb682261"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "containerized-apps-infra-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "068882397753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "containerized-apps-infra-dev-ecs-sg"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068882397753:security-group/sg-0ab7a176443d015c7",
            "description": "Controls access to the RDS database instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic (within VPC)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab7a176443d015c7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ECS services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05fc012b9be2b5b76"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "containerized-apps-infra-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "068882397753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "containerized-apps-infra-dev-rds-sg"
            },
            "tags_all": {
              "Name": "containerized-apps-infra-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d9e631db651a10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    }
  ]
}